deploy/terraform/eks-alb-gateway.tf
# resource "aws_lb" "eks_alb" {
#   name               = "${local.projetc_name}-eks-alb"
#   internal           = true
#   load_balancer_type = "application"
#   security_groups    = [aws_security_group.alb_sg.id]
#   subnets            = [module.vpc.private_subnets]
#
#   tags = {
#     Name = "${local.projetc_name}-eks-alb"
#   }
# }
#
# resource "aws_apigatewayv2_vpc_link" "eks_vpc_link" {
#   name               = "eks_vpc_link"
#   security_group_ids = [aws_security_group.vpc_link_sg.id]
#   subnet_ids         = [module.vpc.private_subnets]
# }
#
# resource "aws_apigatewayv2_integration" "eks_integration" {
#   api_id             = aws_apigatewayv2_api.gtw.id
#   integration_type   = "HTTP_PROXY"
#   integration_method = "ANY"
#   integration_uri    = "http://${aws_lb.eks_alb.dns_name}"
#   connection_type    = "VPC_LINK"
#   connection_id      = aws_apigatewayv2_vpc_link.eks_vpc_link.id
# }
#
# resource "aws_apigatewayv2_route" "proxy_route" {
#   api_id    = aws_apigatewayv2_api.gtw.id
#   route_key = "ANY /{proxy+}"
#   target    = "integrations/${aws_apigatewayv2_integration.eks_integration.id}"
# }
